# edstan-python

./: .gitignore  .readthedocs.yaml  README.md  aggression.csv  environment.yml  pyproject.toml  readme.md  requirements.txt  setup.py  spelling.csv
edstan/: EdstanData.py  __init__.py  ed_stan_model.py  mcmc.py  model.py
edstan/data/: 2pl_latent_reg.stan  gpcm_latent_reg.stan  grsm_latent_reg.stan  pcm_latent_reg.stan  rasch_latent_reg.stan  rsm_latent_reg.stan
edstan/models/: 2pl_latent_reg.stan  pcm_latent_reg.stan  rasch_latent_reg.stan  rsm_latent_reg.stan
source/: api.rst  conf.py  index.rst  tech.rst
tests/: conftest.py  test_gestalt.py  test_model_class.py  test_model_helpers.py
